--- a/public/templates/home.template.html
+++ b/public/templates/home.template.html
@@ -1,1 +1,1 @@
-<p>home</p>
+<div class="parallax"><div class="layer background home"></div><div class="layer base"></div><div class="layer background testimonials"></div><div class="layer base"></div><div class="layer background cooking-classes"></div><div class="layer base"></div><div class="layer background the-books"></div><div class="layer base"></div><div class="layer background contact"></div><footer class="layer base footer"></footer></div>
