--- a/sources/angular/home/home.template.jade
+++ b/sources/angular/home/home.template.jade
@@ -1,1 +1,15 @@
-p home
+.parallax
+  .layer.background.home
+  .layer.base
+  
+  .layer.background.testimonials
+  .layer.base
+
+  .layer.background.cooking-classes
+  .layer.base
+
+  .layer.background.the-books
+  .layer.base
+
+  .layer.background.contact
+  footer.layer.base.footer
