--- a/sources/styles/app.scss
+++ b/sources/styles/app.scss
@@ -7,7 +7,7 @@ body {
   margin: 0;
 }
 
-.layer.background {
+.layer-background {
   background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: center center;
@@ -21,50 +21,9 @@ body {
   &.contact {background-image: url('../imgs/contact.jpg')}
 }
 
-@media (min-device-width: 1024px) { // desktops
-  body, html {
-    overflow: hidden;
-  }
-
-  .parallax {
-    perspective: 100px;
-    overflow-x: hidden;
-    overflow-y: auto;
-
-    .background {
-      transform: translateZ(-100px) scale(2);
-    }
-  }
-}
-
-.parallax {
-  height: 100vh;
-
-  .group {
-    position: relative;
-    height: 100vh;
-    transform-style: preserve-3d;
-  }
-
-  .background {
-    min-height: 100vh;
-  }
-
-  .layer {transform-origin: center}
-
-  .base {
-    transform: translateZ(0);
-    min-height: 70vh;
-    position: relative;
-    z-index: 10;
-    background-color: rgb(236, 235, 223);
-    box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
-  }
-
-  .footer {
-    min-height: 50vh;
-    box-shadow: 0 -1px 3px rgba(0, 0, 0, .3);
-  }
+.layer-base.footer {
+  min-height: 50vh;
+  box-shadow: 0 -1px 3px rgba(0, 0, 0, .3);
 }
 
 
