--- a/sources/views/templates/styles.jade
+++ b/sources/views/templates/styles.jade
@@ -1,2 +1,3 @@
+link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Merriweather')
 link(rel='stylesheet', href='/styles/vendor.css')
 link(rel='stylesheet', href='/styles/app.css')
