--- a/sources/views/index.jade
+++ b/sources/views/index.jade
@@ -6,7 +6,7 @@ html(ng-app='rawfit')
 
     include templates/metas
     include templates/favicons
-    include templates/links
+    include templates/styles
 
   body
     .parallax-scrolling
