--- a/sources/styles/typography/primary.scss
+++ b/sources/styles/typography/primary.scss
@@ -1,4 +1,6 @@
+$primary-typography: 'Merriweather';
+
 body {
   -webkit-font-smoothing: antialiased;
-  font-family: 'Merriweather', serif;
+  font-family: $primary-typography, serif;
 }
