--- a/sources/views/index.jade
+++ b/sources/views/index.jade
@@ -11,6 +11,17 @@ html(ng-app='rawfit')
   body
     .parallax-scrolling
       section.layer-background.home
+        nav.navbar
+          a(href='#') Home
+          a(href='#') About
+          a(href='#') Testimonials
+          a(href='#') Personal training
+          a(href='#') Cooking classes
+          a(href='#') In the news
+          a(href='#') The book
+          a(href='#') The app
+          a(href='#') Contact
+          a(href='#') Blog
       section.layer-base
       
       section.layer-background.testimonials
