--- a/sources/styles/typography/primary.scss
+++ b/sources/styles/typography/primary.scss
@@ -3,4 +3,5 @@ $primary-typography: 'Merriweather';
 body {
   -webkit-font-smoothing: antialiased;
   font-family: $primary-typography, serif;
+  font-size: 12px;
 }
