--- a/sources/styles/navbar/navbar.scss
+++ b/sources/styles/navbar/navbar.scss
@@ -11,5 +11,8 @@
     display: inline-block;
     padding: 0 .5em;
     font-size: .8em;
+    transition: color .3s ease;
+
+    &:hover {color: #f3d475}
   }
 }
