fix logo in home, but continue missing a grid layout

--- a/sources/angular/home/home.template.jade
+++ b/sources/angular/home/home.template.jade
@@ -11,4 +11,5 @@ section.layer-background.home
     a(href='#') Contact
     a(href='#') Blog
 
-  include ../../imgs/rawfit.svg
+  div(style='text-align: center; transform: translateY(100px)')
+    include ../../imgs/rawfit.svg
